style: gridview mode

--- a/assets/app.html
+++ b/assets/app.html
@@ -111,6 +111,9 @@
             <li class="note-line system-setting">
               <div class="system-setting-desc">Circled image</div>
               <div class="system-setting-value switch"><input type="checkbox" id="appearance-circled-image"><label for="appearance-circled-image"></label></div>
+            <li class="note-line system-setting">
+              <div class="system-setting-desc">Gridview album</div>
+              <div class="system-setting-value switch"><input type="checkbox" id="appearance-gridview-album"><label for="appearance-gridview-album"></label></div>
             <li class="note-line system-setting" id="config-appearance-auto-hide-scrollbar">
               <div class="system-setting-desc">Auto hide scrollbar</div>
               <div class="system-setting-value switch"><input type="checkbox" id="appearance-auto-hide-scrollbar"><label for="appearance-auto-hide-scrollbar"></label></div>
