fix: gridview keyboard shortcut
change left and right keyboard shortcut function

--- a/assets/app.html
+++ b/assets/app.html
@@ -274,10 +274,7 @@
     </table>
     <table class=modal-window-table>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x2191;</span></th><td id=version class=modal-window-table-value>move list-view cursor to up</td>
-      </tr>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x2193;</span></th><td id=version class=modal-window-table-value>move list-view cursor to down</td>
+        <th class=modal-window-tablekey><span class=keychar>&#x2190;</span><span class=keychar>&#x2191;</span><span class=keychar>&#x2192;</span><span class=keychar>&#x2193;</span></th><td id=version class=modal-window-table-value>move list-view cursor</td>
       </tr>
       <tr class=modal-window-tableitem>
         <th class=modal-window-tablekey><span class=keychar>&#x23ce;</span></th><td id=version class=modal-window-table-value>activate list-view cursor item</td>
@@ -285,10 +282,10 @@
     </table>
     <table class=modal-window-table>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x2190;</span></th><td id=version class=modal-window-table-value>show list / parent</td>
+        <th class=modal-window-tablekey><span class=keychar>&#x25c7;</span><span class=keychar>&#x2190;</span>or<span class=keychar>&#x8;</span></th><td id=version class=modal-window-table-value>show list / parent</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x2192;</span></th><td id=version class=modal-window-table-value>show now playing</td>
+        <th class=modal-window-tablekey><span class=keychar>&#x25c7;</span><span class=keychar>&#x2192;</span></th><td id=version class=modal-window-table-value>show now playing</td>
       </tr>
       <tr class=modal-window-tableitem>
         <th class=modal-window-tablekey><span class=keychar>?</span></th><td id=version class=modal-window-table-value>help</td>
