fix: use kbd tag

--- a/assets/app.html
+++ b/assets/app.html
@@ -263,32 +263,28 @@
     <h2 class="modal-window-header-sub">Keyboard Shortcuts</h2>
     <table class=modal-window-table>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>space</span></th><td id=version class=modal-window-table-value>play or pause song</td>
+        <th class=modal-window-tablekey><kbd><kbd>space</kbd></kbd></th><td id=version class=modal-window-table-value>play or pause song</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x2303;</span><span class=keychar>&#x21E7;</span><span class=keychar>&#x2192;</span></th><td id=version class=modal-window-table-value>go to next song</td>
+        <th class=modal-window-tablekey><kbd><kbd>&#x2303;</kbd>+<kbd>&#x21E7;</kbd>+<kbd>&#x2192;</kbd></kbd></th><td id=version class=modal-window-table-value>go to next song</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x2303;</span><span class=keychar>&#x21E7;</span><span class=keychar>&#x2190;</span></th><td id=version class=modal-window-table-value>go to previous song</td>
-      </tr>
-    </table>
-    <table class=modal-window-table>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x2190;</span><span class=keychar>&#x2191;</span><span class=keychar>&#x2192;</span><span class=keychar>&#x2193;</span></th><td id=version class=modal-window-table-value>move list-view cursor</td>
+        <th class=modal-window-tablekey><kbd><kbd>&#x2303;</kbd>+<kbd>&#x21E7;</kbd>+<kbd>&#x2190;</kbd></kbd></th><td id=version class=modal-window-table-value>go to previous song</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x23ce;</span></th><td id=version class=modal-window-table-value>activate list-view cursor item</td>
-      </tr>
-    </table>
-    <table class=modal-window-table>
-      <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x25c7;</span><span class=keychar>&#x2190;</span>or<span class=keychar>&#x8;</span></th><td id=version class=modal-window-table-value>show list / parent</td>
+        <th class=modal-window-tablekey><kbd><kbd>&#x2190;</kbd></kbd><kbd><kbd>&#x2191;</kbd></kbd><kbd><kbd>&#x2192;</kbd></kbd><kbd><kbd>&#x2193;</kbd></kbd></th><td id=version class=modal-window-table-value>move list-view cursor</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>&#x25c7;</span><span class=keychar>&#x2192;</span></th><td id=version class=modal-window-table-value>show now playing</td>
+        <th class=modal-window-tablekey><kbd><kbd>&#x23ce;</kbd></kbd></th><td id=version class=modal-window-table-value>activate list-view cursor item</td>
       </tr>
       <tr class=modal-window-tableitem>
-        <th class=modal-window-tablekey><span class=keychar>?</span></th><td id=version class=modal-window-table-value>help</td>
+        <th class=modal-window-tablekey><kbd><kbd>&#x25c7;</kbd>+<kbd>&#x2190;</kbd></kbd>or<kbd><kbd>&#x232b;</kbd></kbd></th><td id=version class=modal-window-table-value>show list / parent</td>
+      </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><kbd><kbd>&#x25c7;</kbd>+<kbd>&#x2192;</kbd></kbd></th><td id=version class=modal-window-table-value>show now playing</td>
+      </tr>
+      <tr class=modal-window-tableitem>
+        <th class=modal-window-tablekey><kbd><kbd>?</kbd></kbd></th><td id=version class=modal-window-table-value>help</td>
       </tr>
     </table>
   </div>
