fix: change gompd addr

--- a/assets/app.html
+++ b/assets/app.html
@@ -229,11 +229,11 @@
             </div>
           <li class="license-box information-box">
             <div>
-              <span class="product-name">github.com/fhs/gompd</span>
+              <span class="product-name">github.com/meiraka/gompd</span>
             </div>
             <div class="link">
-              <a class="product-link" href="https://github.com/fhs/gompd">https://github.com/fhs/gompd</a>
-              <a class="license-link" href="https://github.com/fhs/gompd/blob/master/LICENSE">MIT license</a>
+              <a class="product-link" href="https://github.com/meiraka/gompd">https://github.com/meiraka/gompd</a>
+              <a class="license-link" href="https://github.com/meiraka/gompd/blob/master/LICENSE">MIT license</a>
             </div>
           <li class="license-box information-box">
             <div>
