style: change back button icon

--- a/assets/app.html
+++ b/assets/app.html
@@ -20,8 +20,8 @@
   <nav class="header-items">
     <button type="button" id="header-back" class="header-item header-iconlabel">
       <div class="header-item-iconlabel">
-        <svg class="header-item-icon" width="32" height="32" viewBox="0 0 200 200">
-          <path class="stroke" d="M 40,100 100,40 160,40 160,160 100,160 z"/>
+        <svg class="header-item-icon" width="24" height="32" viewBox="0 0 150 200">
+          <path class="stroke" d="M 100,40 40,100 100,160"/>
         </svg>
         <span id="header-back-label" class="header-item-label"></span>
       </div>
