style: simplified checkbox

--- a/assets/app.html
+++ b/assets/app.html
@@ -93,10 +93,10 @@
               <div class="system-setting-value-expand"><input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range"></div>
             <li class="note-line system-setting" id="config-appearance-animation">
               <div class="system-setting-desc">Animation</div>
-              <div class="system-setting-value switch"><input type="checkbox" id="appearance-animation"><label for="appearance-animation"></label></div>
+              <input type="checkbox" id="appearance-animation" class="slideswitch">
             <li class="note-line system-setting">
               <div class="system-setting-desc">Background image</div>
-              <div class="system-setting-value switch"><input type="checkbox" id="appearance-background-image"><label for="appearance-background-image"></label></div>
+              <input type="checkbox" id="appearance-background-image" class="slideswitch">
             <li class="note-line system-setting">
               <div class="system-setting-desc">Background image blur</div>
               <select class="tool-select value" id="appearance-background-image-blur">
@@ -110,13 +110,13 @@
               </select>
             <li class="note-line system-setting">
               <div class="system-setting-desc">Circled image</div>
-              <div class="system-setting-value switch"><input type="checkbox" id="appearance-circled-image"><label for="appearance-circled-image"></label></div>
+              <input type="checkbox" id="appearance-circled-image" class="slideswitch">
             <li class="note-line system-setting">
               <div class="system-setting-desc">Gridview album</div>
-              <div class="system-setting-value switch"><input type="checkbox" id="appearance-gridview-album"><label for="appearance-gridview-album"></label></div>
+              <input type="checkbox" id="appearance-gridview-album" class="slideswitch">
             <li class="note-line system-setting" id="config-appearance-auto-hide-scrollbar">
               <div class="system-setting-desc">Auto hide scrollbar</div>
-              <div class="system-setting-value switch"><input type="checkbox" id="appearance-auto-hide-scrollbar"><label for="appearance-auto-hide-scrollbar"></label></div>
+              <input type="checkbox" id="appearance-auto-hide-scrollbar" class="slideswitch">
           </ul>
         </article>
         <h1 class="system-article-sub-header">Library</h1>
@@ -131,7 +131,7 @@
           <ul class="system-settings">
             <li class="note-line system-setting">
               <div class="system-setting-desc">Listview follows playback</div>
-              <div class="system-setting-value switch"><input type="checkbox" id="playback-view-follow"><label for="playback-view-follow"></label></div>
+              <input type="checkbox" id="playback-view-follow" class="slideswitch">
           </ul>
         </article>
         <h1 class="system-article-sub-header" id="volume-header">Volume</h1>
@@ -139,7 +139,7 @@
           <ul class="system-settings">
             <li class="note-line system-setting">
               <div class="system-setting-desc">Show volume nob</div>
-              <div class="system-setting-value switch"><input type="checkbox" id="volume-show"><label for="volume-show"></label></div>
+              <input type="checkbox" id="volume-show" class="slideswitch">
             <li class="note-line system-setting">
               <div class="system-setting-desc">Max volume</div>
               <select class="tool-select value" id="volume-max">
