fix: startup blank screen

--- a/assets/app.html
+++ b/assets/app.html
@@ -6,16 +6,16 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="Music">
+<link rel="stylesheet" type="text/css" href="/assets/app.css">
 <link rel="manifest" href="/assets/manifest.json">
 <link rel="apple-touch-icon" sizes="192x192" href="/assets/app.png">
 <link rel="apple-touch-startup-image" href="/assets/w.png">
 <meta name="mobile-web-app-capable" content="yes">
 <link rel="icon" sizes="192x192" href="/assets/app.png">
-<link rel="stylesheet" type="text/css" href="/assets/app.css">
-<script src="/assets/app.js"></script>
+<script src="/assets/app.js" async></script>
 <title>vv</title>
 </head>
-<body class="light">
+<body class="unload light">
 <div id="background" class="background">
   <div id="background-image" class="background-image"></div>
   <div id="background-overlay" class="background background-overlay"></div>
