feature: app icon startup image

--- a/assets/app.html
+++ b/assets/app.html
@@ -10,6 +10,10 @@
 <link rel="manifest" href="/assets/manifest.json">
 <link rel="apple-touch-icon" sizes="192x192" href="/assets/app.png">
 <link rel="apple-touch-startup-image" href="/assets/w.png">
+<!--
+<link rel="apple-touch-startup-image" href="/assets/startup/920x640" media="(device-width: 460px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)">
+<link rel="apple-touch-startup-image" href="/assets/startup/1536x2008" media="(min-device-width: 481px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)">
+-->
 <meta name="mobile-web-app-capable" content="yes">
 <link rel="icon" sizes="192x192" href="/assets/app.png">
 <script src="/assets/app.js" async></script>
