--- a/assets/app.html
+++ b/assets/app.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-title" content="Music">
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
 <link rel="manifest" href="/assets/manifest.json">
-<link rel="apple-touch-icon" sizes="192x192" href="/assets/app.png">
+<link rel="apple-touch-icon" sizes="192x192" href="/assets/app-black.png">
 <link rel="apple-touch-startup-image" href="/assets/w.png">
 <!--
 <link rel="apple-touch-startup-image" href="/assets/startup/920x640" media="(device-width: 460px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)">
