improve: list-view swipe effect

--- a/assets/app.html
+++ b/assets/app.html
@@ -58,8 +58,25 @@
   </nav>
 </header>
 <main>
-  <section id="list" class="full list scrollable">
-    <ol id="list-items" class="list-items"></ol>
+  <section class="lists full">
+    <article id="list0" class="full list scrollable">
+      <ol id="list-items0" class="list-items"></ol>
+    </article>
+    <article id="list1" class="full list scrollable">
+      <ol id="list-items1" class="list-items"></ol>
+    </article>
+    <article id="list2" class="full list scrollable">
+      <ol id="list-items2" class="list-items"></ol>
+    </article>
+    <article id="list3" class="full list scrollable">
+      <ol id="list-items3" class="list-items"></ol>
+    </article>
+    <article id="list4" class="full list scrollable">
+      <ol id="list-items4" class="list-items"></ol>
+    </article>
+    <article id="list5" class="full list scrollable">
+      <ol id="list-items5" class="list-items"></ol>
+    </article>
   </section>
   <section id="main" class="full main">
     <div id="main-cover" class="main-cover">
