--- a/assets/app.html
+++ b/assets/app.html
@@ -95,7 +95,7 @@
 <div id=modal-background class="modal-background hide">
 </div>
 <div id=modal-outer class="modal-outer hide">
-  <div id=modal-help class="modal-window hide">
+  <div id=modal-help class="modal-window help hide">
     <button id=modal-help-close class=modal-window-close type="button" value="">
       <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
@@ -130,7 +130,7 @@
       </tr>
     </table>
   </div>
-  <div id=modal-song class="modal-window hide">
+  <div id=modal-song class="modal-window song hide">
     <button id=modal-song-close class=modal-window-close type="button" value="">
       <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
