--- a/assets/app.html
+++ b/assets/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
@@ -26,7 +26,7 @@
 </div>
 <header>
   <nav class="header-items">
-    <button type="button" id="header-back" class="header-item header-iconlabel">
+    <button type="button" id="header-back" class="header-item header-iconlabel" aria-label="Back">
       <div class="header-item-iconlabel">
         <svg class="header-item-icon" width="24" height="32" viewBox="0 0 150 200">
           <path class="stroke" d="M 100,40 40,100 100,160"/>
@@ -34,12 +34,12 @@
         <span id="header-back-label" class="header-item-label"></span>
       </div>
     </button>
-    <button type="button" id="header-main" class="header-item">
+    <button type="button" id="header-main" class="header-item" aria-label="Now playing">
       <svg class=header-item-icon width="32" height="32" viewBox="0 0 200 200">
         <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
       </svg>
     </button>
-    <button type="button" id="header-system" class="header-item">
+    <button type="button" id="header-system" class="header-item" aria-label="Settings">
       <svg class=header-item-icon width="32" height="32" viewBox="0 0 200 200">
         <path class="stroke"
          d="M 100,30 100,60 z
@@ -96,7 +96,7 @@
 </div>
 <div id=modal-outer class="modal-outer hide">
   <div id=modal-help class="modal-window help hide">
-    <button id=modal-help-close class=modal-window-close type="button" value="">
+    <button id=modal-help-close class=modal-window-close type="button" value="" aria-label="Close">
       <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
       </svg>
@@ -131,7 +131,7 @@
     </table>
   </div>
   <div id=modal-song class="modal-window song hide">
-    <button id=modal-song-close class=modal-window-close type="button" value="">
+    <button id=modal-song-close class=modal-window-close type="button" value="" aria-label="Close">
       <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
       </svg>
@@ -142,7 +142,7 @@
     </div>
   </div>
   <div id="modal-system" class="modal-window hide system">
-    <button id="modal-system-close" class="modal-window-close" type="button" value="">
+    <button id="modal-system-close" class="modal-window-close" type="button" value="" aria-label="Close">
       <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
       </svg>
@@ -327,32 +327,32 @@
 <footer>
   <nav id="control" class="control">
     <nav id="control-playback" class="control-playback">
-      <button class="control-button control-playback-sub" id="control-prev" class=prev type="button" value="prev">
+      <button class="control-button control-playback-sub" id="control-prev" class=prev type="button" value="prev" aria-label="Previous">
         <svg class="control-playback-sub-icon" width="200" height="200" viewBox="0 0 200 200">
           <path class="fill" d="M 155,60 85,100 155,140 z M 105,60 35,100 105,140 z"/>
         </svg>
       </button>
-      <button class="control-button control-playback-toggleplay" id="control-toggleplay" class=play type="button" value="play/pause">
+      <button class="control-button control-playback-toggleplay" id="control-toggleplay" class=play type="button" value="play/pause"  aria-label="Play or Pause">
         <svg class="control-playback-toggleplay-icon" width="200" height="200" viewBox="0 0 200 200">
           <path class="fill play" d="M 70,60 140,100 70,140 z"/>
           <path class="fill pause" d="M 75,60 85,60 85,140 75,140 z M 125,60 115,60 115,140 125,140 z"/>
           <path class="stroke" d="M 25,100 A 75,75 0 1,1 175,100 A 75,75 0 1,1 25,100 z"/>
         </svg>
       </button>
-      <button class="control-button control-playback-sub" id="control-next" class=next type="button" value="next">
+      <button class="control-button control-playback-sub" id="control-next" class=next type="button" value="next" aria-label="Next">
         <svg class="control-playback-sub-icon" width="200" height="200" viewBox="0 0 200 200">
           <path class="fill" d="M 45,60 115,100 45,140 z M 95,60 165,100 95,140 z"/>
         </svg>
       </button>
     </nav>
     <input id="control-volume" class="disabled control-volume" type="range" min=0 max=100 step=1>
-    <button class="control-button control-sub control-repeat" id=control-repeat>
+    <button class="control-button control-sub control-repeat" id=control-repeat  aria-label="Repeat">
       <svg class="control-sub-icon" width="200" height="200" viewBox="0 0 200 200">
         <path class=fill d="M 87.5,30 112.5,45 87.5,60 z M 112.5,145 87.5,160 112.5,175 z"/>
         <rect class=stroke x="40" y="45" width="120" height="110" rx="30" ry="30"/>
       </svg>
     </button>
-    <button class="control-button control-sub" id=control-random>
+    <button class="control-button control-sub" id=control-random  aria-label="Random">
       <svg class="control-sub-icon" width="200" height="200" viewBox="0 0 200 200">
         <path class=fill d="M 150,30 170,45 150,60 z M 150,140 170,155 150,170 z"/>
         <path class=stroke d="M 30,45 A 60,55 0 1,1 30,155 M 150,155 A 60,55 0 1,1 150,45 "/>
