--- a/assets/app.html
+++ b/assets/app.html
@@ -34,7 +34,7 @@
         <span id="header-back-label" class="header-item-label"></span>
       </div>
     </button>
-    <button type="button" id="header-main" class="header-item" aria-label="Now playing">
+    <button type="button" id="header-main" class="header-item header-main" aria-label="Now playing">
       <svg class=header-item-icon width="32" height="32" viewBox="0 0 200 200">
         <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
       </svg>
